--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -5,7 +5,7 @@
 	<title>Integration tests for Basic Template</title>
 
 	<script id="sap-ui-bootstrap"
-		src="../../../resources/sap-ui-core.js"
+		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme='sap_belize'
 		data-sap-ui-resourceroots='{			
 			"be.amista.TravisTest": "../../"			
@@ -14,13 +14,10 @@
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true">
 	</script>
-
-	<link rel="stylesheet" type="text/css" href="../../../resources/sap/ui/thirdparty/qunit-2.css">
-
-	<script src="../../../resources/sap/ui/thirdparty/qunit-2.js"></script>
-	<script src="../../../resources/sap/ui/qunit/qunit-junit.js"></script>
-
+	
+	<script src="QUnit.js"></script>
 	<script src="opaTests.qunit.js"></script>
+	
 </head>
 <body>
 	<div id="qunit"></div>
